<resources>
    <string name="app_name">Orbot</string>
    <string name="app_description">Orbot is a free proxy app that empowers other apps to use the internet more securely. Orbot uses Tor to encrypt your Internet traffic and then hides it by bouncing through a series of computers around the world. Tor is free software and an open network that helps you defend against a form of network surveillance that threatens personal freedom and privacy, confidential business activities and relationships, and state security known as traffic analysis.</string>
    <string name="internal_web_url">http://orbot/</string>
    <string name="default_web_url">http://check.torproject.org</string>
    <string name="secure_default_web_url">https://check.torproject.org</string>
    <string name="tor_check_api_url">https://check.torproject.org/?TorButton=true</string>
    <string name="control_permission_label">start and stop Tor</string>
    <string name="tor_proxy_service_process">torproxyservice</string>
    <string name="status_starting_up">Orbot is starting&#8230;</string>
    <string name="status_activated">Connected to the Tor network</string>
    <string name="status_disabled">Orbot is deactivated</string>
    <string name="status_shutting_down">TorService is shutting down</string>
    <string name="tor_process_starting">Starting Tor client&#8230;</string>
    <string name="tor_process_complete">complete.</string>
    <string name="tor_process_waiting">waiting.</string>
    <string name="not_anonymous_yet">WARNING: Your traffic is not anonymous yet! Please configure your applications to use HTTP proxy 127.0.0.1:8118 or SOCKS4A or SOCKS5 proxy 127.0.0.1:9050</string>
    <string name="menu_home">Home</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log">Log</string>
    <string name="menu_info">Help</string>
    <string name="menu_apps">Apps...</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_about">About</string>
    <string name="menu_promo_apps">Get apps…</string>
    <string name="main_layout_download">Download</string>
    <string name="main_layout_upload">Upload</string>
    <string name="button_help">Help</string>
    <string name="button_close">Close</string>
    <string name="button_about">About</string>
    <string name="button_clear_log">Clear Log</string>
    <string name="menu_verify">Check</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_scan">Scan BridgeQR</string>
    <string name="menu_share_bridge">Share BridgeQR</string>
    <string name="press_to_start">- long press to start -</string>
    <string name="pref_trans_proxy_group">Transparent Proxying (Requires Root)</string>
    <string name="pref_trans_proxy_title">Transparent Proxying</string>
    <string name="pref_trans_proxy_summary">Automatic Torifying of Apps</string>
    <string name="pref_transparent_all_title">Tor Everything</string>
    <string name="pref_transparent_all_summary">Proxy traffic for all apps through Tor</string>
    <string name="pref_transparent_port_fallback_title">Port Proxy Fallback</string>
    <string name="pref_transparent_port_fallback_summary">WARNING: Circumvents common ports (80, 443, etc). *USE ONLY* if \'All\' or \'App\' mode doesn\'t work.</string>
    <string name="pref_transparent_port_title">Port List</string>
    <string name="pref_transparent_port_summary">List of ports to proxy. *USE ONLY* if \'All\' or \'App\' mode doesn\'t work</string>
    <string name="pref_transparent_port_dialog">Enter ports to proxy</string>
    <string name="pref_has_root">Request Root Access</string>
    <string name="pref_has_root_summary">Request root access for transparent proxying</string>
    <string name="status_install_success">Tor binaries successfully installed!</string>
    <string name="status_install_fail">The Tor binary files were unable to be installed. Please check the log and notify tor-assistants@torproject.org</string>
    <string name="title_error">Application Error</string>
    <string name="wizard_title">Orbot</string>
    <string name="wizard_btn_tell_me_more">About Orbot</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_okay">Okay</string>
    <string name="btn_cancel">Cancel</string>
    <string name="wizard_details">Some Orbot Details</string>
    <string name="wizard_details_msg">Orbot is an open-source application that contains Tor, Obfs4Proxy, BadVPN Tun2Socks, LibEvent and Polipo. It provides a local HTTP proxy (8118) and a SOCKS proxy (9050) into the Tor network. Orbot also has the ability, on rooted device, to send all internet traffic through Tor.</string>
    <string name="pref_general_group">General</string>
    <string name="pref_start_boot_title">Start Orbot on Boot</string>
    <string name="pref_start_boot_summary">Automatically start Orbot and connect Tor when your Android device boots</string>
    <string name="pref_node_configuration">Node Configuration</string>
    <string name="pref_node_configuration_summary">These are advanced settings that can reduce your anonymity</string>
    <string name="pref_entrance_node">Entrance Nodes</string>
    <string name="pref_entrance_node_summary">Fingerprints, nicks, countries and addresses for the first hop</string>
    <string name="pref_entrance_node_dialog">Enter Entrance Nodes</string>
    <string name="pref_allow_background_starts_title">Allow Background Starts</string>
    <string name="pref_allow_background_starts_summary">Let any app tell Orbot to start Tor and related services</string>
    <string name="pref_proxy_title">Outbound Network Proxy (Optional)</string>
    <string name="pref_proxy_type_title">Outbound Proxy Type</string>
    <string name="pref_proxy_type_summary">Protocol to use for proxy server: HTTP, HTTPS, SOCKS4, SOCKS5</string>
    <string name="pref_proxy_type_dialog">Enter Proxy Type</string>
    <string name="pref_proxy_host_title">Outbound Proxy Host</string>
    <string name="pref_proxy_host_summary">Proxy Server hostname</string>
    <string name="pref_proxy_host_dialog">Enter Proxy Host</string>
    <string name="pref_proxy_port_title">Outbound Proxy Port</string>
    <string name="pref_proxy_port_summary">Proxy Server port</string>
    <string name="pref_proxy_port_dialog">Enter Proxy port</string>
    <string name="pref_proxy_username_title">Outbound Proxy Username</string>
    <string name="pref_proxy_username_summary">Proxy Username (Optional)</string>
    <string name="pref_proxy_username_dialog">Enter Proxy Username</string>
    <string name="pref_proxy_password_title">Outbound Proxy Password</string>
    <string name="pref_proxy_password_summary">Proxy Password (Optional)</string>
    <string name="pref_proxy_password_dialog">Enter Proxy Password</string>
    <string name="exit_nodes">Exit Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_for_the_last_hop">Fingerprints, nicks, countries and addresses for the last hop</string>
    <string name="enter_exit_nodes">Enter Exit Nodes</string>
    <string name="exclude_nodes">Exclude Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_to_exclude">Fingerprints, nicks, countries and addresses to exclude</string>
    <string name="enter_exclude_nodes">Enter Exclude Nodes</string>
    <string name="strict_nodes">Strict Nodes</string>
    <string name="relays">Relays</string>
    <string name="relaying">Relaying</string>
    <string name="enable_your_device_to_be_a_non_exit_relay">Enable your device to be a non-exit relay</string>
    <string name="relay_port">Relay Port</string>
    <string name="listening_port_for_your_tor_relay">Listening port for your Tor relay</string>
    <string name="enter_or_port">Enter OR port</string>
    <string name="relay_nickname">Relay nickname</string>
    <string name="the_nickname_for_your_tor_relay">The nickname for your Tor relay</string>
    <string name="enter_a_custom_relay_nickname">Enter a custom relay nickname</string>
    <string name="reachable_addresses">Reachable Addresses</string>
    <string name="run_as_a_client_behind_a_firewall_with_restrictive_policies">Run as a client behind a firewall with restrictive policies</string>
    <string name="reachable_ports">Reachable ports</string>
    <string name="ports_reachable_behind_a_restrictive_firewall">Ports reachable behind a restrictive firewall</string>
    <string name="enter_ports">Enter ports</string>
    <string name="enable_debug_log_to_output_must_use_adb_or_alogcat_to_view_">Enable debug log to output (must use adb or aLogcat to view)</string>
    <string name="project_home">Project Home(s): </string>
    <string name="project_urls">https://www.torproject.org/docs/android\nhttps://guardianproject.info/apps/orbot/</string>
    <string name="third_party_software">3rd-Party-Software: </string>
    <string name="tor_version">Tor: https://www.torproject.org</string>
    <string name="libevent_version">LibEvent: http://www.monkey.org/~provos/libevent/</string>
    <string name="obfsproxy_version">Obfs4proxy: https://github.com/Yawning/obfs4</string>
    <string name="openssl_version">OpenSSL: http://www.openssl.org</string>
    <string name="set_locale_title">Language</string>
    <string name="pref_disable_network_title">No Network Auto-Sleep</string>
    <string name="pref_disable_network_summary">Put Tor to sleep when there is no internet available</string>
  <string name="pref_open_proxy_on_all_interfaces_title">Open Proxy on All Interfaces</string>
  <string name="pref_open_proxy_on_all_interfaces_summary">Allow Wi-Fi peers, tethered devices and anyone else who can connect to your IP, to access Tor</string>
    <string name="pref_socks_title">Tor SOCKS</string>
    <string name="pref_socks_summary">Port that Tor offers its SOCKS proxy on (default: 9050 or 0 to disable)</string>
    <string name="pref_socks_dialog">SOCKS Port Config</string>
    <string name="pref_transport_title">Tor TransProxy Port</string>
    <string name="pref_transport_summary">Port that Tor offers its Transparent Proxy on (default: 9040 or 0 to disable)</string>
    <string name="pref_transport_dialog">TransProxy Port Config</string>
    <string name="pref_dnsport_title">Tor DNS Port</string>
    <string name="pref_dnsport_summary">Port that Tor offers its DNS on (default: 5400 or 0 to disable)</string>
    <string name="pref_dnsport_dialog">DNS Port Config</string>
    <string name="pref_torrc_title">Torrc Custom Config</string>
    <string name="pref_torrc_summary">EXPERTS ONLY: enter direct torrc config lines</string>
    <string name="pref_torrc_dialog">Custom Torrc</string>
    <string name="copy_address_to_clipboard">Copy address to clipboard</string>
    <string name="show_auth_cookie">Show auth cookie</string>
    <string name="backup_service">Backup Service</string>
    <string name="delete_service">Delete Service</string>
    <string name="pref_isolate_dest">Isolate destination addresses</string>
    <string name="pref_isolate_dest_summary">Use a different circuit for each destination address</string>
    <string name="pref_connection_padding">Connection padding</string>
    <string name="pref_connection_padding_summary">Always enables connection padding to defend against some forms of traffic analysis. Default: auto</string>
    <string name="pref_reduced_connection_padding">Reduced connection padding</string>
    <string name="pref_reduced_connection_padding_summary">Closes relay connections sooner and sends less padding packets to reduce data and battery usage</string>
    <string name="pnd_URL">URL</string>
    <string name="pnd_username">Username</string>
    <string name="pnd_password">Password</string>
    <string name="pnd_connect">Connect</string>
</resources>