<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/copy_address_to_clipboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_hs_clipboard" />

    <Button
        android:text="@string/show_auth_cookie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_hs_show_auth" />

    <Button
        android:text="@string/backup_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_hs_backup" />

    <Button
        android:text="@string/delete_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_hs_delete" />

    <Button
        android:text="@string/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_hs_cancel" />

</LinearLayout>