<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_private_network_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pnd_URL" />

    <EditText
        android:id="@+id/private_network_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/label_private_network_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pnd_username" />

    <EditText
        android:id="@+id/private_network_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/label_private_network_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pnd_password" />

    <EditText
        android:id="@+id/private_network_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/private_network_dialog_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/private_network_dialog_connect"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pnd_connect" />

    </LinearLayout>

</LinearLayout>
